--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prettier": "^2.6.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "^4.6.3"
   },
   "config": {
