build(esbuild): setup esbuild

--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "commit": "cz",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "clean": "rm -rf dist",
+    "build": "node esbuild.build.js",
+    "dev": "yarn clean && node esbuild.dev.js & yarn ts-types --watch",
+    "prebuild": "yarn clean",
+    "postbuild": "yarn ts-types",
+    "ts-types": "tsc --emitDeclarationOnly --outDir dist"
   },
   "keywords": [],
   "author": "George Bockari <bitwhys@cr8iv.io>",
@@ -24,6 +30,8 @@
     "@types/react-dom": "^18.0.0",
     "babel-loader": "^8.2.5",
     "cz-conventional-changelog": "3.3.0",
+    "esbuild": "^0.14.38",
+    "esbuild-plugin-glob": "^1.1.2",
     "prettier": "^2.6.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
