--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ bower_components
 .lock-wscript
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
+build-utils/Release
 
 # Dependency directories
 node_modules/
@@ -76,11 +76,11 @@ web_modules/
 .cache
 .parcel-cache
 
-# Next.js build output
+# Next.js build-utils output
 .next
 out
 
-# Nuxt.js build / generate output
+# Nuxt.js build-utils / generate output
 .nuxt
 dist
 
@@ -90,7 +90,7 @@ dist
 # https://nextjs.org/blog/next-9-1#public-directory-support
 # public
 
-# vuepress build output
+# vuepress build-utils output
 .vuepress/dist
 
 # Serverless directories
