--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@cr8iv/torch",
   "version": "0.0.1",
   "description": "MVP for design system using Stiches (CSS-in-JS) as the styling framework",
-  "main": "index.js",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/types/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "commit": "cz",
